--- a/zenia-app/src/App.css
+++ b/zenia-app/src/App.css
@@ -5,10 +5,19 @@ html {
   width: 100vw;
   max-width: 100vw;
 }
+
 body {
   overflow-x: hidden;
   width: 100vw;
   max-width: 100vw;
+  font-family: 'Work Sans', sans-serif;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Work Sans', sans-serif;
+  font-weight: 600;
+}
 
+p, span, a, button, input, textarea {
+  font-family: 'Work Sans', sans-serif;
+}
