--- a/zenia-app/src/index.css
+++ b/zenia-app/src/index.css
@@ -6,136 +6,154 @@
 /* Work Sans - Thin */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Thin.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Thin.ttf?v=1') format('truetype');
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-ThinItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-ThinItalic.ttf?v=1') format('truetype');
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Extra Light */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-ExtraLight.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-ExtraLight.ttf?v=1') format('truetype');
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-ExtraLightItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-ExtraLightItalic.ttf?v=1') format('truetype');
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Light */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Light.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Light.ttf?v=1') format('truetype');
   font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-LightItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-LightItalic.ttf?v=1') format('truetype');
   font-weight: 300;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Regular */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Regular.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Regular.ttf?v=1') format('truetype');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Italic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Italic.ttf?v=1') format('truetype');
   font-weight: 400;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Medium */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Medium.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Medium.ttf?v=1') format('truetype');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-MediumItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-MediumItalic.ttf?v=1') format('truetype');
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Semi Bold */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-SemiBold.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-SemiBold.ttf?v=1') format('truetype');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-SemiBoldItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-SemiBoldItalic.ttf?v=1') format('truetype');
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Bold */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Bold.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Bold.ttf?v=1') format('truetype');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-BoldItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-BoldItalic.ttf?v=1') format('truetype');
   font-weight: 700;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Extra Bold */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-ExtraBold.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-ExtraBold.ttf?v=1') format('truetype');
   font-weight: 800;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-ExtraBoldItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-ExtraBoldItalic.ttf?v=1') format('truetype');
   font-weight: 800;
   font-style: italic;
+  font-display: swap;
 }
 
 /* Work Sans - Black */
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-Black.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-Black.ttf?v=1') format('truetype');
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Work Sans';
-  src: url('./assets/fonts/WorkSans-BlackItalic.ttf') format('truetype');
+  src: url('../assets/fonts/WorkSans-BlackItalic.ttf?v=1') format('truetype');
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 
 :root {
