--- a/zenia-app/src/components/common/styles/Card.css
+++ b/zenia-app/src/components/common/styles/Card.css
@@ -77,6 +77,8 @@
 .card-image {
     width: 100%;
     height: 100%;
+    max-width: 1200px;
+    max-height: 300px;
     object-fit: cover;
     transition: transform 0.3s ease;
 }
