--- a/zenia-app/src/pages/styles/AboutUs.css
+++ b/zenia-app/src/pages/styles/AboutUs.css
@@ -96,6 +96,12 @@
     color: #333;
 }
 
+.required-star {
+    color: #e74c3c;
+    font-weight: bold;
+    margin-left: 2px;
+}
+
 .form-group input,
 .form-group textarea {
     width: 100%;
